syntax="proto3";
package student.examples.grpc;

message UserSignupDtoRequest {
    string userName = 1;
    string email = 2;
    string password = 3;
    string token = 4;
}

message UserSignupResponse {
    string message = 1;
}

service UserSignupService {
  rpc signup(UserSignupDtoRequest) returns (UserSignupResponse);
  rpc confirmSignup(UserSignupDtoRequest) returns (UserSignupResponse);
}